# cp4d-installation-scripts

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  softwarehub_cp4d_vars_generation.py
example_config/: cpd_vars.sh  install-options.yml
src/helpers/: cpd_variable_template.sh.j2  id_options_templates.py  install_options_template.sh.j2  jinja2_template_rendering_helpers.py  marimo_sortablekv.py
src/helpers/sortable-kv-dependencies/: sortable-kv.css  sortable-kv.js
src/scripts/: 0.0_make_executable.sh  0.1_refresh_olm_container.sh  0.2_fix_register_perspective_job_annotations.sh  source_env_setup.sh  x.0_cpd_cli_clean_workspace.sh
src/scripts/0_initial_setup/: 0.1_install_oc.sh  0.2_install_cpd_cli.sh  0.3_set_up_openshift_certmanager.sh
src/scripts/1_global_pull_secrets/: 1.0_set_up_global_pull_credential.sh
src/scripts/3_install_softwarehub/: 3.0_cluster_health_check.sh  3.2_set_up_cpd_admin.sh  3.3.0_get_cr_softwarehub.sh  3.3.1_get_instance_creds.sh  3.3.2_softwarehub_admission_controller.sh  3.3_install_ibm_softwarehub.sh  3.4_apply_entitlements.sh
src/scripts/4.5_service_instance_setups/: 4.5_provision_cognosanalytics.sh  4.5_provision_db2.sh  4.5_provision_informix.sh  4.5_provision_mongodb.sh  4.5_provision_planninganalytics.sh
src/scripts/4_install_components/: 4.1.1_inst_wxd_opensearch.sh  4.1_install_components.sh  4.2_cpd_profile.sh  4.x_fix_imagepulloff_error.sh
src/scripts/5_component_specific_scripts/: 5_prep_datastax_mc.sh  5_prep_db2.sh  5_prep_informix.sh  5_prep_mongodb.sh  5_prep_wxd_opensearch.sh
(+12 files in other folders)
